glx/testdata/invalid/custom-vocab-edge-cases/persons/person-custom.glx
persons:
  person-custom:
    properties:
      given_name: "John"
      family_name: "Smith"
      custom_property: "custom value"
      birth_place: "place-leeds"


